Add additional classification tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+# a larger set drawn from the posterior distributions: too big for GitHub! Feel free to email me for a copy.
+data/apogee/classifications/AllClassifications_APOGEE_all_feh8_SNRc_500.h5
+
 # OSX files
 *.DS_Store
 
